--- a/themes/openy_themes/openy_lily/sass/misc/_ccc.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_ccc.scss
@@ -95,3 +95,9 @@
   margin-top: 0;
   padding: 13px 25px;
 }
+
+#ajax-ccc-add-family-member-form {
+  .col-lg-4, .col-lg-6, .col-md-4,  .col-md-6,  .col-xs-12 {
+    padding-left: 0 !important;
+  }
+}
