--- a/themes/openy_themes/openy_lily/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_lily/templates/page/page.html.twig
@@ -71,6 +71,13 @@
           </div>
         </div>
       </form>
+      {% if ccc_logged_in %}
+        {{ ccc_logged_menu }}
+      {% elseif not ccc_logged_in and logged_in %}
+        {{ ccc_anonymous_menu }}
+      {% elseif logged_in %}
+        {{ logged_menu }}
+      {% endif %}
     </div>
     {% block mobile_menu %}
       {{ page.mobile_menu }}
