--- a/themes/openy_themes/openy_lily/sass/global/_fonts.scss
+++ b/themes/openy_themes/openy_lily/sass/global/_fonts.scss
@@ -15,30 +15,36 @@
 
 @font-face {
   font-family: 'Cachet';
-  src: url('../fonts/cachetstd-book-webfont.eot');
-  src: url('../fonts/cachetstd-book-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/cachetstd-book-webfont.woff') format('woff'),
-  url('../fonts/cachetstd-book-webfont.svg#cachetstd-book-webfont') format('svg');
+  src: url('../fonts/cachet/cachet-book.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/cachet/cachet-book.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/cachet/cachet-book.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/cachet/cachet-book.woff') format('woff'), /* Pretty Modern Browsers */
+  url('../fonts/cachet/cachet-book.svg#cachet-book') format('svg'), /* Legacy iOS */
+  url('../fonts/cachet/cachet-book.ttf') format('truetype'); /* Safari, Android, iOS */
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Cachet Bold';
-  src: url('../fonts/cachetstd-bold-webfont.eot');
-  src: url('../fonts/cachetstd-bold-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/cachetstd-bold-webfont.woff') format('woff'),
-  url('../fonts/cachetstd-bold-webfont.svg#cachetstd-bold-webfont') format('svg');
+  src: url('../fonts/cachet/cachet-bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/cachet/cachet-bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/cachet/cachet-bold.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/cachet/cachet-bold.woff') format('woff'), /* Pretty Modern Browsers */
+  url('../fonts/cachet/cachet-bold.svg#cachet-bold') format('svg'), /* Legacy iOS */
+  url('../fonts/cachet/cachet-bold.ttf') format('truetype'); /* Safari, Android, iOS */
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Cachet Medium';
-  src: url('../fonts/cachetstd-medium-webfont.eot');
-  src: url('../fonts/cachetstd-medium-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/cachetstd-medium-webfont.woff') format('woff'),
-  url('../fonts/cachetstd-medium-webfont.svg#cachetstd-medium-webfont') format('svg');
+  src: url('../fonts/cachet/cachet-medium.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/cachet/cachet-medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/cachet/cachet-medium.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/cachet/cachet-medium.woff') format('woff'), /* Pretty Modern Browsers */
+  url('../fonts/cachet/cachet-medium.svg#cachet-medium') format('svg'), /* Legacy iOS */
+  url('../fonts/cachet/cachet-medium.ttf') format('truetype'); /* Safari, Android, iOS */
   font-weight: 600;
   font-style: normal;
 }
