--- a/docroot/themes/custom/ymca/sass/paragraphs/content-banner.scss
+++ b/docroot/themes/custom/ymca/sass/paragraphs/content-banner.scss
@@ -5,9 +5,10 @@
 .content-banner {
   background: $grey1;
   box-shadow: 0 0 15px #d8d8d8;
-  margin: 0 0 10px;
+  margin: 10px 0;
+  border-top: 2px solid #c6168d;
   @media (min-width: 768px) {
-    margin: 0 0 40px;
+    margin: 40px 0;
   }
   &.page-title {
     &:before {
