Update paragraph templates to support the title field.

--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--news-posts-listing.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--news-posts-listing.html.twig
@@ -43,7 +43,12 @@ set classes = [
 view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
+{% if content.field_prgf_title.0 is empty %}
+  {% set title = 'Latest news & Updates'|t %}
+{% else %}
+  {% set title = content.field_prgf_title.0 %}
+{% endif %}
 <div{{ attributes.addClass(classes) }}>
-  <h2 class="h1">{{ 'Latest news & Updates'|t }}</h2>
+  <h2 class="h1">{{ title }}</h2>
   {{ content }}
 </div>
