--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--latest-news-posts-camp.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--latest-news-posts-camp.html.twig
@@ -43,7 +43,11 @@ set classes = [
 view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
-{% set title = 'What\'s New at '|t ~ label ~ '?' %}
+{% if content.field_prgf_title.0 is empty %}
+  {% set title = 'What\'s New at '|t ~ label ~ '?' %}
+{% else %}
+  {% set title = content.field_prgf_title.0 %}
+{% endif %}
 <div{{ attributes.addClass(classes) }}>
   <h2 class="h1">{{ title }}</h2>
   {{ content }}
