Issue #896 Change class page "Edit" link styles and Labels (#906)
* #896 Change class page edit link label

* #896 Change class page edit link style

* #896 Fix style - move button to next line for all locations

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -3860,8 +3860,21 @@ html.js .branch__updates_queue__button {
 .node--type-branch.node--view-mode-sidebar-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .edit-class-popup, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser .edit-class-popup {
+  background-color: #00aeef;
+  color: #ffffff;
   display: inline-block;
-  margin-left: 10px;
+  font-size: 15px;
+  font-weight: normal;
+  padding: 3px 15px;
+  text-transform: lowercase;
+  vertical-align: middle;
+}
+[class*="sidebar"] .node--type-facility.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
+.node--type-branch.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
+.node--type-branch.node--view-mode-sidebar-teaser .edit-class-popup:hover, [class*="sidebar"]
+.node--type-branch.node--view-mode-class-location .edit-class-popup:hover, [class*="sidebar"]
+.node--type-camp.node--view-mode-teaser .edit-class-popup:hover {
+  background-color: #0089d0;
 }
 .marker_tooltip .node--type-facility.node--view-mode-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-teaser, .marker_tooltip
@@ -3976,12 +3989,24 @@ html.js .branch__updates_queue__button {
   padding: 20px;
 }
 .paragraph--type--class-location.paragraph--view-mode--default .empty-text h2 {
-  display: inline;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   letter-spacing: 2px;
-  margin: 0;
+  margin: 0 0 10px;
   text-transform: uppercase;
+}
+.paragraph--type--class-location.paragraph--view-mode--default .edit-class-popup {
+  background-color: #00aeef;
+  color: #ffffff;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: normal;
+  padding: 3px 15px;
+  text-transform: lowercase;
+  vertical-align: middle;
+}
+.paragraph--type--class-location.paragraph--view-mode--default .edit-class-popup:hover {
+  background-color: #0089d0;
 }
 
 .node--view-mode-full.node--type-facility {
