--- a/themes/openy_themes/openy_rose/scss/modules/_branch.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_branch.scss
@@ -933,9 +933,20 @@ html.js {
         color: $purple;
       }
     }
+
     .edit-class-popup {
+      background-color: #00aeef;
+      color: #ffffff;
       display: inline-block;
-      margin-left: 10px;
+      font-size: 15px;
+      font-weight: normal;
+      padding: 3px 15px;
+      text-transform: lowercase;
+      vertical-align: middle;
+
+      &:hover {
+        background-color: #0089d0;
+      }
     }
   }
   .marker_tooltip & {
@@ -1003,12 +1014,26 @@ html.js {
     border: solid 1px $light-grey;
     padding: 20px;
     h2 {
-      display: inline;
       font-family: $font-family-sans-serif;
       font-size: 14px;
       letter-spacing: 2px;
-      margin: 0;
+      margin: 0 0 10px;
       text-transform: uppercase;
+    }
+  }
+
+  .edit-class-popup {
+    background-color: #00aeef;
+    color: #ffffff;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: normal;
+    padding: 3px 15px;
+    text-transform: lowercase;
+    vertical-align: middle;
+
+    &:hover {
+      background-color: #0089d0;
     }
   }
 }
