Removing height from mobile display of blog teaser tile

--- a/themes/openy_themes/openy_rose/scss/modules/_blog.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_blog.scss
@@ -38,7 +38,7 @@
       margin: 15px 0;
       position: relative;
       overflow: hidden;
-      height: 315px;
+      //height: 315px;
       @include breakpoint($screen-sm) {
         height: 292px;
       }
