--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-village-teaser.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-village-teaser.html.twig
@@ -6,11 +6,12 @@
  * @ingroup themeable
  */
 #}
-<div class="inner">
-  <img src="{{ image }}" alt="{{ title }}" />
-  <div class="info">
-    <span class="title">{{ title }}</span>
-    <span class="capacity"><i class="fa fa-user"></i>{{ capacity }}</span>
+<a href="{{ cabin_url }}">
+  <div class="inner">
+    <img src="{{ image }}" alt="{{ title }}" />
+    <div class="info">
+      <span class="title">{{ title }}</span>
+      <span class="capacity"><i class="fa fa-user"></i>{{ capacity }}</span>
+    </div>
   </div>
-</div>
-
+</a>
