[YMCA-1788] fixes for landing page

--- a/docroot/themes/custom/ymca/css/paragraphs/content-banner.css
+++ b/docroot/themes/custom/ymca/css/paragraphs/content-banner.css
@@ -22,6 +22,19 @@
     margin: 0 45px 15px;
   }
 }
+.content-banner .banner-title a {
+  text-decoration: none;
+}
+.content-banner .banner-title a:after {
+  margin-left: 5px;
+  color: #0089d0;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\f138";
+}
 .content-banner .richtext {
   padding: 0 25px 0;
   color: #424242;
