--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--latest-news-posts-branch.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--latest-news-posts-branch.html.twig
@@ -49,6 +49,6 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
   {% set title = content.field_prgf_title.0 %}
 {% endif %}
 <div{{ attributes.addClass(classes) }}>
-    <h2 class="h1">{{ title }}</h2>
-    {{ content }}
+  <h2 class="h1">{{ title }}</h2>
+  {{ content|without('field_prgf_title') }}
 </div>
