#457 Backport YLI fix for Incorrect spacing on locations page section titles

--- a/themes/openy_themes/openy_rose/scss/styles.scss
+++ b/themes/openy_themes/openy_rose/scss/styles.scss
@@ -46,6 +46,7 @@
 @import 'modules/block-description';
 @import 'modules/columns';
 @import 'modules/simple_content';
+@import 'modules/location';
 // Paragraphs
 @import 'paragraphs/1c';
 @import 'paragraphs/amenities';
